<resources>
<!--    <string name="app_name">Hmis Technician</string>-->

    //toast
    <string name="password_changed">Password Changes Successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="unauthorized">UnAuthorized</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="Instutionmaperror">No Institution is Mapped with this user</string>
    <string name="Departmantmaperror">No Department is Mapped with this user</string>
    <string name="empty_item">Please select any item</string>

    <!-- Alert dialog region-->
    <string name="dialog_action_cancel" translatable="false">Cancel</string>
    <string name="dialog_action_yes" translatable="false">Yes</string>
    <string name="dialog_action_ok" translatable="false">OK</string>


    //Main Screen
    <string name="terms_condition_label">Terms and conditions</string>
    <string name="copyright_name" translatable="false">Powered by</string>
    <string name="copyright_msg" translatable="false">Copyrights © 2020 TN HMIS.All Rights Reserved</string>
    <string name="copyright_msg_pune" translatable="false">Copyrights © 2020 Pune HMIS.All Rights Reserved</string>


    //Login

    <string name="health_info">HEALTH MANAGEMENT INFORMATION SYSTEM</string>
    <string name="signin">SIGN IN</string>
    <string name="change_password">Change Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="forgotPasswordHeader">Forgot Password</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="forgetotphint"> User Name / Email ID</string>
    <string name="sendopt">SEND OTP</string>
    <string name="restPassword">RESET PASSWORD</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="enterConfirmPassword">Enter Confirm Password</string>
    <string name="loginheader">Login</string>
    <string name="version" translatable="false">Version</string>


    <!-- Institution   -->

    <string name="Institution_title">Institution</string>
    <string name="Lab">Lab</string>
    <string name="department_title">Department</string>

    <!--    Home Screen   -->

    <string name="registration">Registration</string>
    <string name="quickReg">OP Registration</string>
    <string name="opCorrection">OP Correction</string>
    <string name="covidReg">COVID Registration</string>
    <string name="detailReg">Detailed Registration</string>

    <string name="lmis">LMIS</string>
    <string name="neworder">New Order</string>
    <string name="labtesttext">Lab Test</string>
    <string name="testprocess">Test Process</string>
    <string name="testapproval">Test Approval</string>
    <string name="samplediaptch">Sample Dispatch</string>
    <string name="resultdispath">Result Dispatch</string>
    <string name="orderstatus">Order Status</string>

    <string name="rmis">RMIS</string>
    <string name="rmistech">RMIS New order</string>
    <string name="rmisdashboard">RMIS Dashboard</string>
    <string name="rmistest">RMIS Test </string>
    <string name="rmisprocess">RMIS Process</string>
    <string name="rmisapproval">RMIS Test Approval</string>
    <string name="rmisorder">Order Status</string>
    <string name="rmisdispatch">Result Dispatch</string>

    <string name="action_settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="logout">Log Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logoutname">Are you sure want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- common -->

    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="result">Result</string>

    <!-- searcb -->


    <string name="search_with_3_letters">Search with 3 letters</string>

    <!-- LMIS TEST MOB -->

    <string name="labTestHeading">Lab Test Details</string>
    <string name="labTestProcessHeading">Lab Process Details</string>
    <string name="accepted">Accept</string>
    <string name="process">Process</string>
    <string name="send">Send</string>
    <string name="assign">Assign</string>
    <string name="reject">Reject</string>
    <string name="print">Print</string>
    <string name="testMethod">Test Method</string>
    <string name="assignedTo">Assigned To</string>
    <string name="pinMob">PIN/Mobile No</string>
    <string name="dateRange">Date Range</string>
    <string name="orderNumber">Order Number</string>
    <string name="description">Description</string>
    <string name="reason">Reason</string>
    <string name="assignToOthers">Assign To Others</string>
    <string name="labName">Lab Name</string>
    <string name="sendForApproval">Send For Approval</string>
    <string name="doctorName">Doctor Name</string>
    <string name="approve">Approve</string>
    <string name="orderProcess">Order Process</string>
    <string name="normalValue">Normal Value</string>
    <string name="umo">UMO</string>

    <string name="labApprovalHeading">Lab Approval Details</string>
    <string name="resultApproval">Result Approval</string>
    <string name="sampleDispatchHeading">Sample Dispatch Details</string>
    <string name="resultDispatchHeading">Result Dispatch Details</string>
    <string name="orderStatus">Order Status Details</string>
    <string name="sampleReceive">Receive</string>
    <string name="dispatch">Dispatch</string>







    <!-- LMIS TEST -->


    <string name="ordered_raised">Ordered Raised</string>
    <string name="sample_accepted">Sample Accepted</string>
    <string name="sample_transferred">Sample Transferred</string>
    <string name="sample_processed">Sample Processed</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="sample_acceptance">Sample Acceptance</string>

    <string name="name">Name</string>
    <string name="command">Command</string>


    <string name="MT_title">Manage Templates</string>

    <string name="share">Share</string>
    <string name="active">Active</string>
    <string name="inactive">In Active</string>
    <string name="MT_fav_title">Manage Favorites</string>
    <string name="share_radio1">Myself</string>

    <string name="Snomed_title">Snomed Browser</string>
    <string name="share_radio2">My Department</string>

    <string name="s_no">S.No</string>
    <string name="Code">Code</string>
    <string name="status">Status</string>
    <string name="Type">Type</string>
    <string name="Action">Action</string>
    <string name="bad">Bad Request</string>



    <!-- Quick Register-->

    <string name="remark">Remarks</string>
    <string name="quickreg">OP Registration</string>
    <string name="OPCorrection">OP Correction</string>
    <string name="IPCorrection">IP Correction</string>
    <string name="bluePrint">Blue Print</string>
    <string name="salutation">Salutation</string>
    <string name="professional">Professional</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>

    <string name="fathername">Father / Mother / Guardian Name</string>
    <string name="suffixcode">Suffix Code</string>
    <string name="age">Age</string>
    <string name="Period">Period</string>
    <string name="DOB">DOB</string>
    <string name="Gender">Gender</string>
    <string name="Mobile">Mobile</string>
    <string name="Community">Community</string>
    <string name="DepartmentName">Department</string>
    <string name="Schema">Schema</string>
    <string name="Unit">Unit</string>
    <string name="Maternity">Maternity</string>
    <string name="Address">Address</string>

    <string name="ReasonforCorrection">Reason for Correction</string>
    <string name="DoorNo">Door No</string>
    <string name="StreetName">Street Name</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="District">District</string>
    <string name="Taluk">Taluk</string>
    <string name="Village">Village</string>
    <string name="PinCode">Pin Code</string>
    <string name="SaveOrder">Save Order</string>
    <string name="threeletterSearch">Search with 3 letters</string>
    <string name="AdvanceSearch">Advance Search</string>
    <string name="MobileNumber">Mobile Number</string>

    <string name="MobileNumberPin">Mobile Number/ PIN</string>
    <string name="ExistPin">Existing PIN</string>
    <string name="PDS">PDS</string>
    <string name="Aadhaar_number">Aadhaar Number</string>

    <string name="Aadhaar_numberOldPin">Aadhaar Number/ Exist PIN</string>


</resources>