<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

        <variable
            name="viewModel"
            type="com.hmis_tn.lims.ui.lmis.lmisTest.viewModel.LabTestViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        >


        <TextView
            style="@style/SemiHeading1"
            android:text="@string/orderProcess"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:id="@+id/testName"
            style="@style/SemiHeading3"
            android:background="@color/fadeBlue"
            android:text=""
            android:padding="5dp"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orderListBackground"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                style="@style/SmallTextView"
                android:text="@string/result"
                android:paddingStart="5dp"
                android:id="@+id/textProcess"
                android:layout_marginTop="10dp"
                android:textColor="@color/hmis_background"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderProcessListrecycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/row_order_process_mob"
                />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            tools:ignore="RtlCompat"
            android:orientation="horizontal"
            android:paddingEnd="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/saveOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/outPtientGreen"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_save_white"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="15dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="7dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dr_small_text"
                    tools:ignore="HardcodedText,RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rejectcardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/red"

                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_thumbdown"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="15dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="7dp"
                    android:text="@string/reject"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dr_small_text"
                    tools:ignore="HardcodedText" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/approvedOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/outPtientGreen"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_save_white"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="15dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="7dp"
                    android:text="@string/approve"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dr_small_text"
                    tools:ignore="HardcodedText" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cancelCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/grey"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_close_white_12"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="15dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="7dp"
                    android:text="@string/dialog_action_cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dr_small_text"
                    tools:ignore="HardcodedText" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>
</layout>