<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:ignore="RtlCompat">

    <androidx.appcompat.widget.AppCompatTextView
       style="@style/Heading1"
        android:background="@color/hmis_background"
        android:textColor="@color/white"
        android:text="@string/result"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"

        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            >

            <TextView
                style="@style/SmallTextView2"
                android:text="@string/umo"
                android:id="@+id/test_name"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                />

            <TextView
                style="@style/SmallTextView2"
                android:text=":"
                android:layout_marginStart="30dp"
                android:id="@+id/semicolon"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                />



        </RelativeLayout>


        <TextView
            android:id="@+id/umoValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/dr_small_text"
            android:text="0"
            android:paddingLeft="20dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            >

            <TextView
                style="@style/SmallTextView2"
                android:text="@string/normalValue"
                android:id="@+id/normal_val_text"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                />

            <TextView
                style="@style/SmallTextView2"
                android:text=":"
                android:layout_marginStart="30dp"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                />



        </RelativeLayout>


        <TextView
            android:id="@+id/normalValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/dr_small_text"
            android:text="0"
            android:paddingLeft="20dp" />

    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:id="@+id/closeCardView"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/grey"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_close_white"
            android:fontFamily="@font/poppins"
            android:paddingStart="15dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/dr_small_text"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>
</LinearLayout>