<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        tools:ignore="MissingDefaultResource">

        <LinearLayout
            android:layout_width="@dimen/dialog_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/hmis_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/logouttext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/logout"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dr_title_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/closeImageView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".1"
                    android:padding="3dp"
                    android:src="@drawable/ic_close_white"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">
                <!--                   <ImageView
                                       android:id="@+id/deleteImageView"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:fontFamily="@font/poppins_semibold"
                                       android:gravity="center"
                                       android:paddingTop="10dp"
                                       app:srcCompat="@drawable/ic_bin" />-->

                <TextView
                    android:id="@+id/logoutname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/hmis_background"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/logoutname"
                    android:textSize="@dimen/dr_medium_text"
                    android:textStyle="normal" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:layout_marginRight="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/outPtientGreen"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/yestext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_tick_12"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/poppins"
                        android:padding="7dp"
                        android:text="@string/yes"
                        android:textSize="@dimen/dr_medium_text"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText"
                        android:drawableLeft="@drawable/ic_tick" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/clear"
                    app:cardCornerRadius="8dp"
                    tools:ignore="RtlCompat">

                    <TextView
                        android:id="@+id/notext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_close_white_12"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/poppins"
                        android:padding="7dp"
                        android:text="@string/no"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dr_medium_text"
                        tools:ignore="HardcodedText" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>